--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    jhedheuhfuehfuheufhe
+    <h1>Unique organisms discovered living amongst us</h1>
+    <h3>845379</h3>
+    <p>Discovered by Sean Mullins</p>
+    <h2>THRING THRING THRONG THRONG</h2>
+    <p>This thing is one of the many children in the THRORIST family. It's main noticeable features which seperate it from other life forms is it's eyes and mouth, which is shaped like a... it's just an interesting shape. In most cases it's spotted on all fours, running with unlimited energy across the suburbs of Plorclind like the noble steed it is. It can be called from several yards away by shouting the words of calling: "THRING THRING, THRONG THRONG". However, it only comes to those pure of heart, like eh, Jerry? Yeah, he loves Jerry.</p>
+    <h3>437562</h3>
+    <p>Discovered by Daerue Taraare Puru</p>
+    <h2>NO LEGS</h2>
+    <p>This thing has no legs. Or at least it appears like that. The species has been evolved to have no skeletal structure in their legs. Their legs used to be ginormous. As a result of this, their arms have evolved to become bigger and stronger, that way they can walk on them and throw things with them, including themselves. </p>
+    <h3>358974</h3>
+    <p>Discovered by Sean Mullins</p>
+    <h2>SCHOOM SCHOOM SCHOOSH</h2>
+    <p>He's what many call a "big back". His eyes are not on his head, they are his nipples. This means he can't wear a shirt. His arms also connect from the lower half of his torso. He has a long nose and an odd mouth like Thring Thring Throng Throng has. Unlike that thing, however, he is a grown man who envys getting strong at the gym. He's working on it, he hopes it impresses his wife, Scheem Scheem Scheesh. No, she is not included in this website, because she errrr... would probably get this website taken down. If you know why, you know why.</p>
+    <h2></h2>
+    
 </body>
 </html>
