--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <h3>437562</h3>
     <p>Discovered by Daerue Taraare Puru</p>
     <h2>NO LEGS</h2>
-    <p>This thing has no legs. Or at least it appears like that. The species has been evolved to have no skeletal structure in their legs. Their legs used to be ginormous. As a result of this, their arms have evolved to become bigger and stronger, that way they can walk on them and throw things with them, including themselves. </p>
+    <p>This thing has no legs. Or at least it appears like that. The species has been evolved to have no skeletal structure in their legs. Their legs used to be ginormous. As a result of this, their arms have evolved to become bigger and stronger, that way they can walk on them and throw things with them, including themselves. This one specifically is the best friend of Thring Thring Throng Throng, however their species is an enemy of the Throrist family. They are not meant to be friends.</p>
     <h3>358974</h3>
     <p>Discovered by Sean Mullins</p>
     <h2>SCHOOM SCHOOM SCHOOSH</h2>
-    <p>He's what many call a "big back". His eyes are not on his head, they are his nipples. This means he can't wear a shirt. His arms also connect from the lower half of his torso. He has a long nose and an odd mouth like Thring Thring Throng Throng has. Unlike that thing, however, he is a grown man who envys getting strong at the gym. He's working on it, he hopes it impresses his wife, Scheem Scheem Scheesh. No, she is not included in this website, because she errrr... would probably get this website taken down. If you know why, you know why.</p>
-    <h2></h2>
-    
+    <p>He's what many call a "big back". His eyes are not on his head, they are his nipples. This means he can't wear a shirt. His arms also connect from the lower half of his torso. He has a long nose and an odd mouth like Thring Thring Throng Throng has. Unlike that thing, however, he is a grown man who envys getting strong at the gym. He's working on it, he hopes it impresses his wife, Scheem Scheem Scheesh. No, she is not included in this website, because she errrr... would probably get this website taken down. If you know why, you know why.</p><h2></h2>
+    <h3>845380</h3>
+    <p>Discovered by Sean Muliins</p>
+    <h2>THRANG THRANG THRUNG THRUNG</h2>
+    <p>Pronounced: "thr[ah]ng thr[ah]ng thr[oo]ng thr[oo]ng" this thing is the sister of Thring Thring Throng Throng. She's pretty much the same thing, but a female version. It's hard to really call it a "girl" though. She can be called by shouting "THRANG THRANG THRUNG THRUNG" although she is not interested in those pure of heart. She mainly just settles for whoever she's called by, as a substitute for her brother. Neither really have much of a thought process.</p>
 </body>
 </html>
