Sean-year-10-website /index.html

--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
 <body>
     <h1>Unique organisms discovered living amongst us</h1>
     <h3>845379</h3>
-    <p>Discovered by Sean Mullins</p>
+    <h6>Discovered by Sean Mullins</h6>
     <h2>THRING THRING THRONG THRONG</h2>
-    <p>This thing is one of the many children in the THRORIST family. It's main noticeable features which seperate it from other life forms is it's eyes and mouth, which is shaped like a... it's just an interesting shape. In most cases it's spotted on all fours, running with unlimited energy across the suburbs of Plorclind like the noble steed it is. It can be called from several yards away by shouting the words of calling: "THRING THRING, THRONG THRONG". However, it only comes to those pure of heart, like eh, Jerry? Yeah, he loves Jerry.</p>
+    <p>This mysterious organism is one of the many children in the THRORIST family. His noticeable features that seperate him from other life forms are his eyes and mouth, it's mouth being shaped like a... it's just an interesting shape. In most cases it's spotted on all fours, galloping across the suburbs of Plorcland like the noble steed it is. It can be called from several yards away by shouting his name: "THRING THRING, THRONG THRONG". However, it only comes to those pure of heart, like Jerry. He cherishes Jerry.</p>
     <h3>437562</h3>
-    <p>Discovered by Daerue Taraare Puru</p>
-    <h2>NO LEGS</h2>
-    <p>This thing has no legs. Or at least it appears like that. The species has been evolved to have no skeletal structure in their legs. Their legs used to be ginormous. As a result of this, their arms have evolved to become bigger and stronger, that way they can walk on them and throw things with them, including themselves. This one specifically is the best friend of Thring Thring Throng Throng, however their species is an enemy of the Throrist family. They are not meant to be friends.</p>
+    <h6>Discovered by Daerue Taraare Puru</h6>
+    <h2>THE LEGLESS/NO LEGS</h2>
+    <p>This thing has "no legs". Or at least it appears to be that way. It's species has been evolved to have absolutely no skeletal structure in their legs. Their ancestors legs were ginormous. In order to aid this weakness, their arms have evolved to become bigger and stronger, that way they can walk on them and throw things with them. That includes throwing themselves. This one specifically is the best friend of Thring Thring Throng Throng, however their species opposes the Throrist family. They are not meant to be friends.</p>
     <h3>358974</h3>
-    <p>Discovered by Sean Mullins</p>
+    <h6>Discovered by Sean Mullins</h6>
     <h2>SCHOOM SCHOOM SCHOOSH</h2>
-    <p>He's what many call a "big back". His eyes are not on his head, they are his nipples. This means he can't wear a shirt. His arms also connect from the lower half of his torso. He has a long nose and an odd mouth like Thring Thring Throng Throng has. Unlike that thing, however, he is a grown man who envys getting strong at the gym. He's working on it, he hopes it impresses his wife, Scheem Scheem Scheesh. No, she is not included in this website, because she errrr... would probably get this website taken down. If you know why, you know why.</p><h2></h2>
+    <p>He's what many call a "big back". His eyes are not on his head, they are his nipples. This means he can't wear a shirt, as it would practically blind him. His arms also connect from the lower half of his torso. He has a long nose and a mouth shaped like... let's just say an infinity symbol... Unlike that thing, however, he is a grown man who envys bulking up (getting strong). He's trying to work on it, he hopes to impress his wife, Scheem Scheem Scheesh. His wife is not included in this website, because she errrr... would probably get this website taken down. If you know why, you know why.</p>
     <h3>845380</h3>
-    <p>Discovered by Sean Muliins</p>
+    <h6>Discovered by Sean Mullins</h6>
     <h2>THRANG THRANG THRUNG THRUNG</h2>
-    <p>Pronounced: "thr[ah]ng thr[ah]ng thr[oo]ng thr[oo]ng" this thing is the sister of Thring Thring Throng Throng. She's pretty much the same thing, but a female version. It's hard to really call it a "girl" though. She can be called by shouting "THRANG THRANG THRUNG THRUNG" although she is not interested in those pure of heart. She mainly just settles for whoever she's called by, as a substitute for her brother. Neither really have much of a thought process.</p>
+    <p>Pronounced: "thr[ah]ng thr[ah]ng thr[oo]ng thr[oo]ng" THIS equally mysterious organism is the sister of Thring Thring Throng Throng. She is of the same species, but of the opposite gender. It's hard to really call it a "girl" though. She can be called by shouting "THRANG THRANG THRUNG THRUNG" although she is not interested in those pure of heart. She prefers to assist, horrible individuals with bad intentions.</p>
+    <h3>000006</h3>
+    <h6>Discovered by Sean Mullins</h6>
+    <h2>THRORIST</h2>
+    <p>If you've read the other pages in this website, you would have been foreshadowed many times. He is the father of Thring Thring Throng Throng and many other children. He has basically zero connection to the plug outlet race (the human beings of this universe) unlike his children. He is just a pure alien that supposedly came from another planet to eerth in search of "fun". And "fun" is exactly what he found.</p>
+    <h2>DISGUSTING INFORMATION BEYOND THIS POINT, YOU HAVE BEEN WARNED</h2>
+    <p>Upon arrival at eerth, he found a so called "lover". This lover, unfortunately became the mother of Thring Thring Throng Throng and many others. Throrist kidnapped this lover, and has been said to be SAing her every so often to this day. This is how the children in the Throrist family are being created. Those of his children including Thring Thring Throng Throng and Thrang Thrang Thrung Thrung ran away from their father and are yet to be found and forced to return home. Hopefully one day, we can assist them in getting revenge on this horrible creature.</p>
 </body>
 </html>
