Sean-year-10-website /index.html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
     <h3>000006</h3>
     <h6>Discovered by Sean Mullins</h6>
     <h2>THRORIST</h2>
-    <p>If you've read the other pages in this website, you would have been foreshadowed many times. He is the father of Thring Thring Throng Throng and many other children. He has basically zero connection to the plug outlet race (the human beings of this universe) unlike his children. He is just a pure alien that supposedly came from another planet to eerth in search of "fun". And "fun" is exactly what he found.</p>
-    <h2>DISGUSTING INFORMATION BEYOND THIS POINT, YOU HAVE BEEN WARNED</h2>
-    <p>Upon arrival at eerth, he found a so called "lover". This lover, unfortunately became the mother of Thring Thring Throng Throng and many others. Throrist kidnapped this lover, and has been said to be SAing her every so often to this day. This is how the children in the Throrist family are being created. Those of his children including Thring Thring Throng Throng and Thrang Thrang Thrung Thrung ran away from their father and are yet to be found and forced to return home. Hopefully one day, we can assist them in getting revenge on this horrible creature.</p>
+    <p>If you've read the other pages in this website, you would have been foreshadowed many times. He is the father of Thring Thring Throng Throng and many other children. He has basically zero connection to the plug outlet race (the human beings of this universe) unlike his children. He is just a pure alien that supposedly came from another planet to eerth in search of "fun". And "fun" is exactly what he found. How he made Thring Thring Throng Throng is not to be described in this website, let's just say it would be "a bit much" for the audience that reads this.</p>
 </body>
 </html>
