--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <div>
     <h1>Unique organisms discovered living amongst us</h1>
     <h3>845379</h3>
     <h6>Discovered by Sean Mullins</h6>
     <h2>THRING THRING THRONG THRONG</h2>
     <p>This mysterious organism is one of the many children in the THRORIST family. His noticeable features that seperate him from other life forms are his eyes and mouth, it's mouth being shaped like a... it's just an interesting shape. In most cases it's spotted on all fours, galloping across the suburbs of Plorcland like the noble steed it is. It can be called from several yards away by shouting his name: "THRING THRING, THRONG THRONG". However, it only comes to those pure of heart, like Jerry. He cherishes Jerry.</p>
+    </div>
     <h3>437562</h3>
     <h6>Discovered by Daerue Taraare Puru</h6>
     <h2>THE LEGLESS/NO LEGS</h2>
