--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Unique life forms discovered roaming these parts</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div>
-    <h1>Unique organisms discovered living amongst us</h1>
+    <h1>Unique life forms discovered roaming these parts</h1>
     <h3>845379</h3>
     <h6>Discovered by Sean Mullins</h6>
     <h2>THRING THRING THRONG THRONG</h2>
