--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Unique life forms discovered roaming these parts</h1>
     <h3>845379</h3>
     <h6>Discovered by Sean Mullins</h6>
-    <h2>THRING THRING THRONG THRONG</h2>
-    <p>This mysterious organism is one of the many children in the THRORIST family. His noticeable features that seperate him from other life forms are his eyes and mouth, it's mouth being shaped like a... it's just an interesting shape. In most cases it's spotted on all fours, galloping across the suburbs of Plorcland like the noble steed it is. It can be called from several yards away by shouting his name: "THRING THRING, THRONG THRONG". However, it only comes to those pure of heart, like Jerry. He cherishes Jerry.</p>
-    </div>
+    <img class="throng" src="to be added">
+    <h2 class="throng">THRING THRING THRONG THRONG</h2>
+    <p class="throng">This mysterious organism is one of the many children in the THRORIST family. His noticeable features that seperate him from other life forms are his eyes and mouth, it's mouth being shaped like a... it's just an interesting shape. In most cases it's spotted on all fours, galloping across the suburbs of Plorcland like the noble steed it is. It can be called from several yards away by shouting his name: "THRING THRING, THRONG THRONG". However, it only comes to those pure of heart, like Jerry. He cherishes Jerry.</p>
     <h3>437562</h3>
     <h6>Discovered by Daerue Taraare Puru</h6>
     <h2>THE LEGLESS/NO LEGS</h2>
@@ -21,11 +21,11 @@
     <h3>358974</h3>
     <h6>Discovered by Sean Mullins</h6>
     <h2>SCHOOM SCHOOM SCHOOSH</h2>
-    <p>He's what many call a "big back". His eyes are not on his head, they are his nipples. This means he can't wear a shirt, as it would practically blind him. His arms also connect from the lower half of his torso. He has a long nose and a mouth shaped like... let's just say an infinity symbol... Unlike that thing, however, he is a grown man who envys bulking up (getting strong). He's trying to work on it, he hopes to impress his wife, Scheem Scheem Scheesh. His wife is not included in this website, because she errrr... would probably get this website taken down. If you know why, you know why.</p>
+    <p>He's what many would call a "big back". His eyes are not on his head, they are his nipples. This means he can't wear a shirt, as it would practically blind him. His arms also connect from the lower half of his torso. He has a long nose and a mouth shaped like... let's just say an infinity symbol... Unlike that thing, however, he is a grown man who envys bulking up (getting strong). He's trying to work on it, he hopes to impress his wife, Scheem Scheem Scheesh. His wife is not included in this website, because she errrr... would probably get this website taken down. If you know why, you know why.</p>
     <h3>845380</h3>
     <h6>Discovered by Sean Mullins</h6>
     <h2>THRANG THRANG THRUNG THRUNG</h2>
-    <p>Pronounced: "thr[ah]ng thr[ah]ng thr[oo]ng thr[oo]ng" THIS equally mysterious organism is the sister of Thring Thring Throng Throng. She is of the same species, but of the opposite gender. It's hard to really call it a "girl" though. She can be called by shouting "THRANG THRANG THRUNG THRUNG" although she is not interested in those pure of heart. She prefers to assist, horrible individuals with bad intentions.</p>
+    <p>Pronounced: "thr[ah]ng thr[ah]ng thr[oo]ng thr[oo]ng" this EQUALLY mysterious organism is the sister of Thring Thring Throng Throng. She is of the same species, but of the opposite gender. It's hard to really call it a "girl" though. She can be called by shouting "THRANG THRANG THRUNG THRUNG" although she is not interested in those pure of heart. She prefers to assist, horrible individuals with bad intentions.</p>
     <h3>000006</h3>
     <h6>Discovered by Sean Mullins</h6>
     <h2>THRORIST</h2>
