Unique life forms discovered roaming these parts

--- a/index.html
+++ b/index.html
@@ -7,28 +7,15 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div>
     <h1>Unique life forms discovered roaming these parts</h1>
-    <h3>845379</h3>
-    <h6>Discovered by Sean Mullins</h6>
-    <img class="throng" src="to be added">
-    <h2 class="throng">THRING THRING THRONG THRONG</h2>
-    <p class="throng">This mysterious organism is one of the many children in the THRORIST family. His noticeable features that seperate him from other life forms are his eyes and mouth, it's mouth being shaped like a... it's just an interesting shape. In most cases it's spotted on all fours, galloping across the suburbs of Plorcland like the noble steed it is. It can be called from several yards away by shouting his name: "THRING THRING, THRONG THRONG". However, it only comes to those pure of heart, like Jerry. He cherishes Jerry.</p>
-    <h3>437562</h3>
-    <h6>Discovered by Daerue Taraare Puru</h6>
-    <h2>THE LEGLESS/NO LEGS</h2>
-    <p>This thing has "no legs". Or at least it appears to be that way. It's species has been evolved to have absolutely no skeletal structure in their legs. Their ancestors legs were ginormous. In order to aid this weakness, their arms have evolved to become bigger and stronger, that way they can walk on them and throw things with them. That includes throwing themselves. This one specifically is the best friend of Thring Thring Throng Throng, however their species opposes the Throrist family. They are not meant to be friends.</p>
-    <h3>358974</h3>
-    <h6>Discovered by Sean Mullins</h6>
-    <h2>SCHOOM SCHOOM SCHOOSH</h2>
-    <p>He's what many would call a "big back". His eyes are not on his head, they are his nipples. This means he can't wear a shirt, as it would practically blind him. His arms also connect from the lower half of his torso. He has a long nose and a mouth shaped like... let's just say an infinity symbol... Unlike that thing, however, he is a grown man who envys bulking up (getting strong). He's trying to work on it, he hopes to impress his wife, Scheem Scheem Scheesh. His wife is not included in this website, because she errrr... would probably get this website taken down. If you know why, you know why.</p>
-    <h3>845380</h3>
-    <h6>Discovered by Sean Mullins</h6>
-    <h2>THRANG THRANG THRUNG THRUNG</h2>
-    <p>Pronounced: "thr[ah]ng thr[ah]ng thr[oo]ng thr[oo]ng" this EQUALLY mysterious organism is the sister of Thring Thring Throng Throng. She is of the same species, but of the opposite gender. It's hard to really call it a "girl" though. She can be called by shouting "THRANG THRANG THRUNG THRUNG" although she is not interested in those pure of heart. She prefers to assist, horrible individuals with bad intentions.</p>
-    <h3>000006</h3>
-    <h6>Discovered by Sean Mullins</h6>
-    <h2>THRORIST</h2>
-    <p>If you've read the other pages in this website, you would have been foreshadowed many times. He is the father of Thring Thring Throng Throng and many other children. He has basically zero connection to the plug outlet race (the human beings of this universe) unlike his children. He is just a pure alien that supposedly came from another planet to eerth in search of "fun". And "fun" is exactly what he found. How he made Thring Thring Throng Throng is not to be described in this website, let's just say it would be "a bit much" for the audience that reads this.</p>
+    <a Href=throng-page.html><h2 class="throng">THRING THRING THRONG THRONG</h2></a>
+    <A Href=throng-page.html><img src="/throng-thumb.jpeg"></A>
+    <a Href=nolegs-page.html><h2 class="nolegs">THE LEGLESS/NO LEGS</h2></a>
+    <A Href=nolegs-page.html><img src="/nolegs-thumb.jpeg"></A>
+    <a Href=schoosh-page.html><h2 class="schoosh">SCHOOM SCHOOM SCHOOSH</h2></a>
+    <A Href=schoosh-page.html><img src="/schoosh-thumb.jpeg"></A>
+    <a Href=thrung-page.html><h2 class="thrung">THRANG THRANG THRUNG THRUNG</h2></a>
+    <A Href=thrung-page.html><img src="/thrung-thumb.jpeg"></A>
 </body>
 </html>
+
