--- a/throng-page.html
+++ b/throng-page.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1 class="throng"><A href="/index.html">Return to index</A></h1>
+    <h1 class="throng"><A href="/indeks.html">Return to index</A></h1>
     <h2 class="throng">THRING THRING THRONG THRONG</h2>
     <A Href="/throng-large.jpeg"><img src="/throng-thumb.jpeg"></A>
     <h3>845379</h3>
