--- a/thrung-page.html
+++ b/thrung-page.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1 class="thrung"><A href="/index.html">Return to index</A></h1>
+    <h1 class="thrung"><A href="/indeks.html">Return to index</A></h1>
     <h2 class="thrung">THRANG THRANG THRUNG THRUNG</h2>
     <A Href="/thrung-large.jpeg"><img src="/thrung-thumb.jpeg"></A>
     <h3>845380</h3>
