--- a/nolegs-page.html
+++ b/nolegs-page.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1 class="nolegs"><A href="/indeks.html">Return to index</A></h1>
+    <h1 class="nolegs"><A href="/index.html">Return to index</A></h1>
     <h2 class="nolegs">THE LEGLESS/NO LEGS</h2>
     <A Href="/nolegs-large.jpeg"><img src="/nolegs-thumb.jpeg"></A>
     <h3>437562</h3>
