--- a/throng-page.html
+++ b/throng-page.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1 class="throng"><A href="/index.html">Return to index</A></h1>
+    <h1 class="throng"><A href="index.html">Return to index</A></h1>
     <h2 class="throng">THRING THRING THRONG THRONG</h2>
-    <A Href="/throng-large.jpeg"><img src="/throng-thumb.jpeg"></A>
+    <A Href="throng-large.jpeg"><img src="throng-thumb.jpeg"></A>
     <h3>845379</h3>
     <h6>Discovered by Sean Mullins</h6>
     <p class="throng">This mysterious organism is one of the many children in the THRORIST family. His noticeable features that seperate him from other life forms are his eyes and mouth, his mouth in the shape of a big special smile. In most cases he's spotted on all fours, galloping across the suburbs of Plorcland like the noble steed he is. He can be called from several yards away by shouting his name: "THRING THRING, THRONG THRONG". However, he only comes to those pure of heart, like Jerry. He cherishes Jerry.</p>
