--- a/thrung-page.html
+++ b/thrung-page.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1 class="thrung"><A href="/index.html">Return to index</A></h1>
+    <h1 class="thrung"><A href="index.html">Return to index</A></h1>
     <h2 class="thrung">THRANG THRANG THRUNG THRUNG</h2>
-    <A Href="/thrung-large.jpeg"><img src="/thrung-thumb.jpeg"></A>
+    <A Href="thrung-large.jpeg"><img src="thrung-thumb.jpeg"></A>
     <h3>845380</h3>
     <h6>Discovered by Sean Mullins</h6>
     <p class="thrung">Pronounced: "thr[ah]ng thr[ah]ng thr[oo]ng thr[oo]ng" this equally mysterious organism is the sister of Thring Thring Throng Throng. She is of the same species, but of the opposite gender. Like her brother, she can be called by shouting her name: "THRANG THRANG THRUNG THRUNG" although she is not interested in those pure of heart. For some insane reason, she prefers to assist those with bad intentions or just horrible people in general. We'll never understand why she's like this.</p>
