--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <h1>Unique life forms discovered roaming these parts</h1>
     <a Href=throng-page.html><h2 class="throng">THRING THRING THRONG THRONG</h2></a>
-    <A Href=throng-page.html><img src="./throng-thumb.jpeg"></A>
+    <A Href=throng-page.html><img src="throng-thumb.jpeg"></A>
     <a Href=nolegs-page.html><h2 class="nolegs">THE LEGLESS/NO LEGS</h2></a>
-    <A Href=nolegs-page.html><img src="./nolegs-thumb.jpeg"></A>
+    <A Href=nolegs-page.html><img src="nolegs-thumb.jpeg"></A>
     <a Href=schoosh-page.html><h2 class="schoosh">SCHOOM SCHOOM SCHOOSH</h2></a>
-    <A Href=schoosh-page.html><img src="./schoosh-thumb.jpeg"></A>
+    <A Href=schoosh-page.html><img src="schoosh-thumb.jpeg"></A>
     <a Href=thrung-page.html><h2 class="thrung">THRANG THRANG THRUNG THRUNG</h2></a>
-    <A Href=thrung-page.html><img src="./thrung-thumb.jpeg"></A>
+    <A Href=thrung-page.html><img src="thrung-thumb.jpeg"></A>
 </body>
 </html>
 
