--- a/schoosh-page.html
+++ b/schoosh-page.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCHOOSH</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="/stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1 class="schoosh"><A href="index.html">Return to index</A></h1>
+    <h1 class="schoosh"><A href="/index.html">Return to index</A></h1>
     <h2 class="schoosh">SCHOOM SCHOOM SCHOOSH</h2>
-    <A Href="schoosh-large.jpeg"><img src="schoosh-thumb.jpeg"></A>
+    <A Href="/schoosh-large.jpeg"><img src="/schoosh-thumb.jpeg"></A>
     <h3>734563</h3>
     <h6>Discovered by Sean Mullins</h6>
     <p class="schoosh">He's what many would call a "big back". His eyes are not on his head, they are his nipples. This means he can't wear a shirt, as it would practically blind him. His arms also connect from the lower half of his torso. Unlike many others he has a nose, and it is very long. He is a grown man who wishes he could get stronger. He's trying to work on it, he hopes to impress his wife, Scheem Scheem Scheesh.</p>
