--- a/schoosh-page.html
+++ b/schoosh-page.html
@@ -7,7 +7,7 @@
     <link rel="/stylesheet" href="/style.css"/>
 </head>
 <body>
-    <h1 class="schoosh"><A href="/index.html">Return to index</A></h1>
+    <h1 class="schoosh"><A href="/">Return to index</A></h1>
     <h2 class="schoosh">SCHOOM SCHOOM SCHOOSH</h2>
     <A Href="/schoosh-large.jpeg"><img src="/schoosh-thumb.jpeg"></A>
     <h3>734563</h3>
