--- a/schoosh-page.html
+++ b/schoosh-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCHOOSH</title>
-    <link rel="/stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="/style.css"/>
 </head>
 <body>
     <h1 class="schoosh"><A href="/">Return to index</A></h1>
