--- a/throng-page.html
+++ b/throng-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THRONG</title>
-    <link rel="/stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="/style.css"/>
 </head>
 <body>
     <h1 class="throng"><A href="/index.html">Return to index</A></h1>
