--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Unique life forms discovered roaming these parts</h1>
-    <a Href="/throng-page.html"><h2 class="throng">THRING THRING THRONG THRONG</h2></a>
-    <a Href="/throng-page.html"><img src="/throng-thumb.jpeg"></A>
+    <a Href="./throng-page.html"><h2 class="throng">THRING THRING THRONG THRONG</h2></a>
+    <a Href="./throng-page.html"><img src="/throng-thumb.jpeg"></A>
     <a Href="/nolegs-page.html"><h2 class="nolegs">THE LEGLESS/NO LEGS</h2></a>
     <a Href="/nolegs-page.html"><img src="/nolegs-thumb.jpeg"></A>
     <a Href="/schoosh-page.html"><h2 class="schoosh">SCHOOM SCHOOM SCHOOSH</h2></a>
