--- a/nolegs-page.html
+++ b/nolegs-page.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOLEGS</title>
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-    <h1 class="nolegs"><A href="/index.html">Return to index</A></h1>
+    <h1 class="nolegs"><A href="./index.html">Return to index</A></h1>
     <h2 class="nolegs">THE LEGLESS/NO LEGS</h2>
-    <A Href="nolegs-large.jpeg"><img src="/nolegs-thumb.jpeg"></A>
+    <A Href="./nolegs-large.jpeg"><img src="./nolegs-thumb.jpeg"></A>
     <h3>437562</h3>
     <h6>Discovered by Daerue Taraare Puru</h6>
     <p class="nolegs">This thing has "no legs". Or at least they appear to be that way. Their species has evolved through the years to have absolutely no skeletal structure in their legs. Their ancestors legs were ginormous. In order to aid this weakness, their arms have evolved to become bigger and stronger, that way they can walk on them and throw things with them. That includes throwing themselves. This one specifically is the best friend of Thring Thring Throng Throng, however their species opposes the Throrist family. They are not meant to be friends.</p>
