fix index css link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unique life forms discovered roaming these parts</title>
-    <link rel="stylesheet" href="https://mullinss-jpg.github.io/Sean-year-10-website/style.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
     <h1>Unique life forms discovered roaming these parts</h1>
